fixed overflow

--- a/style.css
+++ b/style.css
@@ -853,6 +853,7 @@ footer{
         }
         p{
             font-size: 12px;
+            width: 100px;
         }
         .button-get{
             padding: 10px 25px;
@@ -931,9 +932,11 @@ footer{
         }
     }
     .section-five{
+        width: fit-content;
         padding: 0;
         .division-one{
             padding: 0px 90px;
+            width: fit-content;
             .sector{
                 height: 7px;
                 margin-bottom: 12px;
@@ -946,13 +949,15 @@ footer{
                 font-size: 10px;
                 line-height: 15px;
                 margin-bottom: 20px;
+                width: fit-content;
             }
             .link , .icon{
                 font-size: 12px;
             }
         }
         .videocard{
-            width: 330px;
+            width: 80%;
+            min-width: 300px;
             height: 230px;
         }
     }
